Closed Bug 1638010 Opened 4 years ago Closed 4 years ago

[Wayland] Don't borrow dmabuf surface target when it's not locked

Categories

(Core :: Graphics: Layers, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: stransky, Assigned: stransky)

Details

Attachments

(1 file)

WaylandDMABUFTextureData::BorrowDrawTarget() should just fail if underlying dmabuf surface is not locked.

Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c67a5c3491df
[Wayland] Make WaylandDMABUFTextureData::BorrowDrawTarget() fail when underlying dmabuf surface is not locked, r=sotaro
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: