Bug 1638010 [Wayland] Make WaylandDMABUFTextureData::BorrowDrawTarget() fail when underlying dmabuf surface is not locked, r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D75329